Pulizia codice, rimosso StarryText.java